fix layout of featured posts on safari

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -459,3 +459,19 @@ a.btn-social-icon:hover {
 .covi-card {
   margin-bottom: 24px;
 }
+
+/* featured posts */
+.covi-featured-posts {
+  display: flex;
+  flex-wrap: wrap;
+}
+.covi-featured-post {
+  width: 100%;
+}
+@media (min-width: 769px) {
+  .covi-featured-post {
+    width: calc((100% - 1px)/3);
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+}
